fixed paragraph alignment

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: #06365f;
+  background-color: white;
 }
 
 .instagram-logo {
@@ -22,6 +22,12 @@ p {
   float:left;
   display: inline-block;
 }
+
+.frame {
+  float: right;
+  display: inline-block;
+}
+
 .navbar {
   padding: 10px;
   float: left;
@@ -34,7 +40,19 @@ p {
   line-height: 60px;
 }
 
+.phone {
+  float: left;
+  display: inline-block;
+}
+
+a {
+  text-transform: uppercase;
+  text-decoration: none;
+  text-decoration-color: #1c5380;
+  list-style: none;
+}
+
 footer{
   display: inline-block;
-  margin: 0;
+  margin: 0 auto;
 }
